Bug 32480 - xf86-input-evdev-2.5.99.902 kills X
Summary: xf86-input-evdev-2.5.99.902 kills X
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-17 12:55 UTC by Sergey Kondakov
Modified: 2011-01-03 14:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log with working xf86-input-evdev-2.5 (36.25 KB, text/plain)
2010-12-17 12:56 UTC, Sergey Kondakov
no flags Details

Description Sergey Kondakov 2010-12-17 12:55:20 UTC
xorg-server is 1.9.3;
kernel is 2.6.36.2 on SMP x86_64;

backtrace from kdm.log:
"The XKEYBOARD keymap compiler (xkbcomp) reports:
> Warning:          Symbol map for key <RALT> redefined
>                   Using last definition for conflicting fields
> Warning:          Type "ONE_LEVEL" has 1 levels, but <RALT> has 2 symbols
>                   Ignoring extra symbols
Errors from xkbcomp are not fatal to the X server

Backtrace:
0: /usr/bin/X (xorg_backtrace+0x2d) [0x483fa5]
1: /usr/bin/X (0x400000+0x53732) [0x453732]
2: /lib/libpthread.so.0 (0x39dcc00000+0xfe60) [0x39dcc0fe60]
3: /usr/bin/X (miPointerUpdateSprite+0x14c) [0x44d883]
4: /usr/bin/X (0x400000+0x4da09) [0x44da09]
5: /usr/bin/X (0x400000+0x87770) [0x487770]
6: /usr/bin/X (0x400000+0x11c72a) [0x51c72a]
7: /usr/bin/X (0x400000+0x85890) [0x485890]
8: /usr/bin/X (BlockHandler+0x42) [0x42e2f1]
9: /usr/bin/X (WaitForSomething+0x23d) [0x44e2bb]
10: /usr/bin/X (0x400000+0x2af44) [0x42af44]
11: /usr/bin/X (0x400000+0x21638) [0x421638]
12: /lib/libc.so.6 (__libc_start_main+0xfd) [0x39dc01ecdd]
13: /usr/bin/X (0x400000+0x210f9) [0x4210f9]
Segmentation fault at address 0x10

Fatal server error:
Caught signal 11 (Segmentation fault). Server aborting"

while using mouse it segfaults randomly - sometimes right away, sometimes after an hour. but if i touch a touchpad it's 100% kill.

downgrading back to 2.5 fixed it.
Comment 1 Sergey Kondakov 2010-12-17 12:56:44 UTC
Created attachment 41222 [details]
Xorg.0.log with working xf86-input-evdev-2.5
Comment 2 Peter Hutterer 2010-12-20 23:04:42 UTC
can you bisect the driver to find the commit that broke it? I havent noticed any crashes yet with master, so it could be somewhere in the ABI 12 patches
Comment 3 Sergey Kondakov 2010-12-21 02:16:36 UTC
oh. bisecting... unless i screwed it up, here is offender:
b48f4c41c0d3386bba3e9d8fa3da91f18aae190b is the first bad commit
commit b48f4c41c0d3386bba3e9d8fa3da91f18aae190b
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Oct 11 09:33:28 2010 +1000

    Add proximity support.

    When one of the tools comes into proximity, queue up a proximity event and
    send it accordingly.

    Includes special handling for tablets that do not send axes with tools
    (#29645)

    Some tablets send axis values, then EV_SYN, and in the next event the
    BTN_TOOL_PEN/BTN_TOUCH, etc. For these tablets, the cursor doesn't move as
    coordinates while not in proximity are ignored.

    Buffer coordinates received while out-of-proximity and if we get a proximity
    event without other coordinates, re-use the last ones received.

    X.Org Bug 29645 <http://bugs.freedesktop.org/show_bug.cgi?id=29645>

    Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
    Reviewed-by: Chris Bagwell <chris@cnpbagwell.com>
    Reviewed-by: Benjamin Tissoires <tissoire@cena.fr>

:040000 040000 78149677b79e45804fe2f00fdc279a3dcba40687 fd3b10da679183d03beb0da17961c6dee923798f M      src

what it has todo with simple touchpad is an anyones's guess.
Comment 4 Peter Hutterer 2011-01-03 14:13:23 UTC
commit bed25600f66db245b895a48d6edca30568ca7559
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Dec 23 12:13:16 2010 +1000

    Don't update first_val and num_val if we don't have data (#32480)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.